--- a/manifest.json
+++ b/manifest.json
@@ -27,7 +27,7 @@
   "content_scripts": [
     {
       "matches": ["http://www.facebook.com/*", "https://www.facebook.com/*"],
-      "js": ["content.js"],
+      "js": ["content.js", "ocrad.js"],
       "run_at": "document_end"
     }
   ],
