--- a/manifest.json
+++ b/manifest.json
@@ -26,7 +26,7 @@
 
   "content_scripts": [
     {
-      "matches": ["http://www.facebook.com/*", "https://www.facebook.com/*"],
+      "matches": ["*://*.rhcloud.com/*"],
       "js": ["content.js", "ocrad.js"],
       "run_at": "document_end"
     }
