--- a/manifest.json
+++ b/manifest.json
@@ -27,7 +27,7 @@
   "content_scripts": [
     {
       "matches": ["*://*.rhcloud.com/*"],
-      "js": ["content.js", "ocrad.js"],
+      "js": ["ocrad.js", "content.js"],
       "run_at": "document_end"
     }
   ],
